# pro-agent

./: .env.example  .gitignore  Dockerfile  README.md  SOUL.md  TODOS.md  agent.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
app/: auth.py  config.py  identity.py  main.py
app/agent/: graph.py  nodes.py  pipeline.py  state.py
app/db/: pool.py  tables.py
app/memory/: embeddings.py  retriever.py  store.py
app/models/: requests.py  responses.py
app/observability/: langfuse.py
app/output/: schemas.py  validator.py
app/tools/: guardrails.py  logger.py  registry.py
db/: init.sql
docs/: API_SPEC.md  DB_DESIGN.md  IMPLEMENTATION_NOTES.md  SRD.md  UI_SPEC.md  codebase-summary.md  project-roadmap.md  system-architecture.md
plans/20260318-pro-agent-build/: COMPLETION_REPORT.md  phase-01-scaffold-docker-db.md  phase-02-core-agent-memory.md  phase-03-tool-use.md  phase-04-structured-output-routing.md  plan.md
plans/reports/: docs-update-summary.md  lean-20260318-pro-agent-tier2.md  reviewer-20260318-pro-agent-python.md  tester-20260318-pro-agent-setup.md
tests/: conftest.py  test_auth.py  test_config.py  test_embeddings.py  test_health.py
